k8s/dev/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: amortized
  labels:
    app: amortized
    component: minio
spec:
  type: ClusterIP
  selector:
    app: amortized
    component: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
