k8s/dev/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: amortized
  labels:
    app: amortized
    component: mlflow
spec:
  type: ClusterIP
  selector:
    app: amortized
    component: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: http
