k8s/dev/mlflow-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow
  namespace: amortized
  labels:
    app: amortized
    component: mlflow
spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
